@@ -18,6 +18,8 @@ ScrollZ
     ! usage of deprecate GnuTLS types (reported by NetBSD maintainer)
     ! iconv() compiler warnings on platforms that require const
       parameter (reported by NetBSD maintainer)
+    ! silly bug where channels that were not bound are displayed
+      in current window
 
 ------------------------------------------------------------------------------
 
